# HYGE-Hyska-Game-Engine

./: .commitlintrc.yaml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  clippy.toml  package-lock.json  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  nightly.yml  roadmap-report.yml
crates/hyge-app/: Cargo.toml
crates/hyge-app/examples/: hello_window.rs
crates/hyge-app/src/: config.rs  lib.rs  prelude.rs
crates/hyge-app/tests/: m0_smoke.rs  m5_smoke.rs
crates/hyge-asset/: Cargo.toml
crates/hyge-asset/src/: asset.rs  asset_types.rs  context.rs  db.rs  gpu_upload.rs  handle.rs  lib.rs  plugin.rs  prelude.rs  server.rs  watcher.rs
crates/hyge-asset/src/importer/: environment.rs  gltf.rs  golden.rs  import.rs  material.rs  mesh.rs  meshlet.rs  meta.rs  mod.rs  texture.rs  transcode.rs
crates/hyge-asset/tests/: ibl_importer.rs  m2_hot_reload.rs  m2_import_pipeline.rs
crates/hyge-audio/: Cargo.toml
crates/hyge-audio/src/: bus.rs  components.rs  events.rs  hrtf.rs  lib.rs  plugin.rs  prelude.rs  server.rs  spatial.rs
crates/hyge-core/: Cargo.toml
crates/hyge-core/src/: color.rs  id.rs  lib.rs  log.rs  math.rs  prelude.rs  result.rs
crates/hyge-ecs/: Cargo.toml
crates/hyge-ecs/src/: lib.rs  plugin.rs  prelude.rs  schedule.rs  set.rs
crates/hyge-editor/: Cargo.toml
crates/hyge-editor-protocol/: Cargo.toml
crates/hyge-editor-protocol/src/: envelope.rs  error.rs  framing.rs  lib.rs
crates/hyge-editor-shm/: Cargo.toml
crates/hyge-editor-shm/src/: lib.rs
crates/hyge-editor/src/: auth.rs  commands.rs  data.rs  history.rs  lib.rs  lifecycle.rs  lock.rs  project.rs  server.rs  snapshots.rs  state.rs  transport.rs  viewport.rs
crates/hyge-editor/tests/: r082_lifecycle.rs  r083_snapshots.rs  r084_commands.rs  r084_history.rs  r085_hierarchy_selection.rs  r086_data_services.rs  r086_ipc.rs  r087_viewport.rs  r088_viewport_transport.rs  r098_qt_contract.rs  r101_scene_hot_reload.rs  r102_recovery.rs  r103_e2e.rs
crates/hyge-editor/tests/fixtures/r103-editor-project/: external.hyge-world  main.hyge-world
crates/hyge-editor/tests/fixtures/r103-editor-project/assets/: persistent-cube.hyge-prefab
crates/hyge-editor/tests/fixtures/r103-editor-project/assets/source/: triangle.gltf
crates/hyge-input/: Cargo.toml
crates/hyge-input/src/: action.rs  binding.rs  hot_reload.rs  lib.rs  plugin.rs  prelude.rs  translate.rs
crates/hyge-physics/: Cargo.toml
crates/hyge-physics/src/: components.rs  config.rs  events.rs  lib.rs  plugin.rs  prelude.rs  query.rs  step.rs
crates/hyge-physics/src/rapier_impl/: body.rs  char_controller.rs  collider.rs  island.rs  joint.rs  mod.rs
crates/hyge-render/: Cargo.toml
crates/hyge-render-graph/: Cargo.toml
crates/hyge-render-graph/src/: allocator.rs  barrier.rs  compile.rs  frame.rs  graph.rs  lib.rs  pass.rs  prelude.rs  resource.rs
crates/hyge-render-graph/tests/: barrier_inference.rs  transient_allocator.rs
crates/hyge-render-graph/tests/snapshots/: barrier_inference__five_pass_graph_barrier_inference_snapshot.snap  hyge-render-graph__barrier_inference__five_pass_graph_barrier_inference_snapshot.snap
crates/hyge-render/benches/: m4_pipeline.rs
crates/hyge-render/src/: bindless.rs  clustered_forward.rs  config.rs  cull.rs  ibl.rs  ibl_gpu.rs  lambert.rs  lib.rs  meshlet.rs  pbr.rs  post.rs  prelude.rs  profiler.rs  renderer.rs  shadow.rs  skinning.rs  triangle.rs  view.rs  viewport.rs
crates/hyge-render/src/shader/: bloom.wgsl  irradiance.wgsl  lambert.wgsl  light_grid.wgsl  meshlet_cull.wgsl  pbr.wgsl  prefilter.wgsl  shadow_atlas.wgsl  shadow_csm.wgsl  skinning.wgsl  smaa.wgsl  taa.wgsl  tonemap.wgsl  triangle.wgsl
crates/hyge-render/tests/: bindless_stress.rs  ibl.rs  lit_sphere.rs  pbr_shader.rs  r042_clustered_forward.rs  r043_bindless_ecs.rs  r044_m3_damagedhelmet.rs  r050_r059_phase5_core.rs  r064_instancing_extraction.rs  r065_scene_smoke.rs
crates/hyge-runtime-test/: Cargo.toml
crates/hyge-runtime-test/src/: capture.rs  compare.rs  lib.rs  renderer.rs
crates/hyge-runtime-test/tests/: first_triangle.rs
crates/hyge-scene/: Cargo.toml
crates/hyge-scene/src/: components.rs  env.rs  extract.rs  lib.rs  plugin.rs  prefab.rs  prefab_asset.rs  prefab_id.rs  prelude.rs  runtime.rs  transform.rs  world.rs  world_asset.rs
crates/hyge-scene/tests/: r065_scene_hot_reload.rs  r101_persist_reload.rs  world_test.rs
crates/hyge-script/: Cargo.toml
crates/hyge-script/src/: api.rs  components.rs  engine.rs  events.rs  hot_reload.rs  lib.rs  plugin.rs  prelude.rs  reflect_bind.rs  sandbox.rs
crates/hyge-tools/: Cargo.toml
crates/hyge-tools/src/: cli.rs  lib.rs  main.rs  prelude.rs
crates/hyge-tools/src/cmd/: cook.rs  doctor.rs  editor.rs  headless.rs  import.rs  inspect.rs  mod.rs  serve.rs
crates/hyge-window/: Cargo.toml
crates/hyge-window/src/: config.rs  events.rs  lib.rs  plugin.rs  prelude.rs  raw_input.rs  window.rs
docs/: architecture.md  ownership.md  roadmap.toml
docs/adr/: 0001-wgpu-as-graphics-api.md  0002-bevy-ecs.md  0003-render-stack.md  README.md  (+17 more)
protocol/: editor.schema.json
scripts/: build_editor_windows.ps1  check-breaking-with-adr.sh  r104_clean_machine_smoke.ps1
tools/hyge-editor-python/: HygeEditor.cmd  README.txt  main.py  pyproject.toml  pysidedeploy.spec  select_project.ps1
tools/hyge-editor-python/qml/: Main.qml  __init__.py  qml.qrc
tools/hyge-editor-python/src/hyge_editor/: __init__.py  e2e.py  input_controller.py  interaction.py  ipc.py  layout_state.py  main.py  models.py  session.py  theme.py  viewport_item.py  viewport_transport.py
tools/hyge-editor-python/tests/: fake_server.py  run_r103_e2e.py  test_ipc.py  test_models.py  test_r100_preferences.py  test_r103_evidence.py  test_r104_packaging.py  test_shell.py  test_viewport.py
tools/roadmap_report/: Cargo.toml  README.md
tools/roadmap_report/src/: error.rs  lib.rs  main.rs  model.rs  parse.rs  report.rs  validate.rs
tools/roadmap_report/tests/: integration.rs
tools/roadmap_report/tests/data/: invalid_items.toml  invalid_phase.toml  valid.toml
(+21 files in other folders)
