[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hyge/hyge"
homepage = "https://hyge.dev"
documentation = "https://docs.rs/hyge"
readme = "README.md"
authors = ["The Hyge Authors"]
description = "A modern, modular 3D game engine in Rust."
keywords = ["game-engine", "3d", "wgpu", "ecs", "rust"]
categories = ["game-engine", "graphics", "rendering"]
publish = false

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unused_must_use = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pedantic lints we deliberately allow by design (see AGENTS.md §7.1):
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
unreadable_literal = "allow"
redundant_pub_crate = "allow"
needless_pass_by_value = "allow"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
strip = "debuginfo"

# ============================================================================
# External dependencies (single-version policy)
# ============================================================================
# Every external dep used by any member crate is declared here with its
# pinned version. Member crates reference these as `dep = { workspace = true }`
# (see AGENTS.md §7.1). To upgrade a dep, change the version in one place.
# ============================================================================

[workspace.dependencies]

# Math
glam = { version = "0.29", features = ["bytemuck"] }

# Logging + tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rmp-serde = "1.3"
ron = "0.8"

# Byte / bit manipulation
bytemuck = { version = "1.18", features = ["derive"] }
bitflags = "2.6"

# ECS (bevy)
bevy_ecs = "0.14"
bevy_app = "0.14"
bevy_tasks = "0.14"
bevy_utils = "0.14"
bevy_reflect = "0.14"
bevy_window = "0.14"

# GPU
wgpu = "22"
naga = "22"
# Image (for runtime-test crate)
image = { version = "0.25", default-features = false, features = ["png"] }

# Render graph
petgraph = "0.6"
indexmap = { version = "2.6", features = ["serde"] }

# Asset pipeline
rusqlite = { version = "0.32", features = ["bundled"] }
blake3 = "1.5"
notify = "6.1"
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "macros", "fs"] }
async-channel = "2.3"
lz4_flex = "0.11"
zstd = "0.13"

# glTF + meshopt (meshlet baking)
gltf = { version = "1.4", default-features = false, features = ["import", "names", "KHR_lights_punctual", "extensions", "extras"] }
meshopt = { version = "0.3", features = ["decode", "encode", "simplifier", "cluster"] }

# Physics
rapier3d = "0.18"

# Audio (deferred to M7 — see roadmap R-160+; declared as workspace dep
# when hyge-audio is wired up to actually use these crates).

# Windowing + input
winit = "0.30"
raw-window-handle = "0.6"
gilrs = "0.10"

# Windows-specific (raw input for hyge-window)
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_Input",
    "Win32_UI_WindowsAndMessaging",
] }

# Scripting
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }

# Editor
egui = "0.30"
egui_dock = "0.13"
egui_tiles = "0.7"
egui-wgpu = "0.30"

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Async runtime (for CLI tool and serve)
axum = "0.7"

# Testing utilities
insta = "1.41"
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3.1"
# Minimal executor for blocking on wgpu async APIs (request_adapter,
# request_device) inside tests. Used by hyge-render-graph and
# hyge-render test harnesses.
pollster = "0.4"

# ============================================================================
# Internal hyge-* crates (path + workspace)
# ============================================================================
# Each member crate is also declared here so other members can reference
# it as `hyge_x = { workspace = true }` (consistent with external deps).
# ============================================================================

hyge-core = { path = "crates/hyge-core", version = "0.1.0" }
hyge-ecs = { path = "crates/hyge-ecs", version = "0.1.0" }
hyge-render-graph = { path = "crates/hyge-render-graph", version = "0.1.0" }
hyge-render = { path = "crates/hyge-render", version = "0.1.0" }
hyge-asset = { path = "crates/hyge-asset", version = "0.1.0" }
hyge-scene = { path = "crates/hyge-scene", version = "0.1.0" }
hyge-physics = { path = "crates/hyge-physics", version = "0.1.0" }
hyge-audio = { path = "crates/hyge-audio", version = "0.1.0" }
hyge-window = { path = "crates/hyge-window", version = "0.1.0" }
hyge-input = { path = "crates/hyge-input", version = "0.1.0" }
hyge-script = { path = "crates/hyge-script", version = "0.1.0" }
hyge-app = { path = "crates/hyge-app", version = "0.1.0" }
hyge-editor = { path = "crates/hyge-editor", version = "0.1.0" }
hyge-tools = { path = "crates/hyge-tools", version = "0.1.0" }
hyge-runtime-test = { path = "crates/hyge-runtime-test", version = "0.1.0" }
