[package]
name = "hyge-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "App builder, AppConfig, default_plugins. The only crate that wires the engine together."

[dependencies]
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
tracing = { workspace = true }
hyge-core = { workspace = true }
hyge-ecs = { workspace = true }
hyge-window = { workspace = true }
hyge-render = { workspace = true }
hyge-scene = { workspace = true }
hyge-physics = { workspace = true }
hyge-audio = { workspace = true }
hyge-input = { workspace = true }
hyge-script = { workspace = true }

[[example]]
name = "hello_window"
path = "examples/hello_window.rs"
