[package]
name = "hyge-asset"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Content-addressed asset DB (BLAKE3), loader registry, hot-reload watcher, refcounted handles, GPU upload. Implementation deferred to M3 (see roadmap R-030..R-037)."

[dependencies]
hyge-core = { workspace = true }
