[package]
name = "hyge-asset"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Content-addressed asset DB (BLAKE3), loader registry, hot-reload watcher, refcounted handles, GPU upload. Implementation deferred to M3 (see roadmap R-030..R-037)."

[dependencies]
hyge-core = { workspace = true }
hyge-ecs = { workspace = true }
bevy_app = { workspace = true }
rusqlite = { workspace = true }
blake3 = { workspace = true }
notify = { workspace = true }
lz4_flex = { workspace = true }
zstd = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
