[package]
name = "hyge-asset"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Content-addressed asset DB (BLAKE3), loader registry, hot-reload watcher, refcounted handles, GPU upload. Implementation deferred to M3 (see roadmap R-030..R-037)."

[dependencies]
hyge-core = { workspace = true }
hyge-ecs = { workspace = true }
hyge-render = { workspace = true }
bevy_app = { workspace = true }
bevy_tasks = { workspace = true }
rusqlite = { workspace = true }
blake3 = { workspace = true }
notify = { workspace = true }
lz4_flex = { workspace = true }
zstd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
bytemuck = { workspace = true }
gltf = { workspace = true }
meshopt = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
# `image` is used by the R-036 golden test to produce a small
# PNG fixture that the importer feeds to the KTX2 transcoder.
image = { workspace = true, features = ["png"] }
# `hyge-runtime-test` powers the M2 hot-reload integration
# test (R-038) which uses the headless `TestRenderer` to
# register the modified mesh into a real `BindlessTable`.
hyge-runtime-test = { workspace = true }
hyge-render = { workspace = true }
