[package]
name = "hyge-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "kira backend, structured bus mixer (master/sfx/voice/ui/ambient/music), spatial 3D, optional HRTF."

[features]
default = []
audio-hrtf = ["dep:oddio"]

[dependencies]
kira = { workspace = true }
kira-spatial-audio = { workspace = true }
oddio = { workspace = true, optional = true }
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hyge-core = { workspace = true }
