[package]
name = "hyge-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Audio engine: kira backend, structured bus mixer, spatial 3D, optional HRTF. Implementation deferred to M7 (see roadmap R-160+)."

[features]
default = []
audio-hrtf = []

[dependencies]
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true }
tracing = { workspace = true }
hyge-core = { workspace = true }
