[package]
name = "hyge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Foundational types: math (glam wrappers), color spaces, log, asset id, error types."

[dependencies]
glam = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
