[package]
name = "hyge-editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "egui-based editor: viewport, hierarchy, inspector, content browser, asset graph, console, profiler, undo/redo. Implementation deferred to M8 (see roadmap R-080..R-089)."

[dependencies]
hyge-core = { workspace = true }
hyge-render = { workspace = true }
egui = { workspace = true }
