[package]
name = "hyge-editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust editor service for the PySide6/Qt frontend: protocol, commands, snapshots, and editor state."

[dependencies]
hyge-core = { workspace = true }
hyge-asset = { workspace = true }
hyge-ecs = { workspace = true }
hyge-scene = { workspace = true }
hyge-editor-protocol = { workspace = true }
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
blake3 = { workspace = true }
fs2 = { workspace = true }
atomicwrites = { workspace = true }
getrandom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
