[package]
name = "hyge-input"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Action<T> abstraction, TOML binding parser, hot-reload, edge detection, gamepad via gilrs. Implementation deferred to M7 (see roadmap R-074..R-075)."

[dependencies]
hyge-core = { workspace = true }
