[package]
name = "hyge-input"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Action<T> abstraction, TOML bindings, hot-reload, raw input, and gamepad support."

[dependencies]
hyge-core = { workspace = true }
hyge-ecs = { workspace = true }
hyge-window = { workspace = true }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
gilrs = { workspace = true }
