[package]
name = "hyge-physics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "rapier3d wrapper behind a feature flag. Implementation deferred to M7 (see roadmap R-070..R-071)."

[features]
default = []
physics-rapier = []

[dependencies]
hyge-core = { workspace = true }
