[package]
name = "hyge-physics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "rapier3d wrapper behind a feature flag. Implementation deferred to M7 (see roadmap R-070..R-071)."

[features]
default = []
physics-rapier = ["dep:rapier3d"]

[dependencies]
hyge-core = { workspace = true }
hyge-ecs = { workspace = true }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true }
rapier3d = { workspace = true, optional = true }
