[package]
name = "hyge-render-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Render graph: DAG of passes with automatic barrier inference and transient resource allocation. Implementation deferred to M2 (see roadmap R-020..R-022)."

[lints.rust]
unsafe_code = "allow"

[dependencies]
hyge-core = { workspace = true }
