[package]
name = "hyge-render-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Render graph: DAG of passes with automatic barrier inference and transient resource allocation."

[lints.rust]
unsafe_code = "allow"

[dependencies]
wgpu = { workspace = true }
petgraph = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
pollster = { workspace = true }
hyge-core = { workspace = true }
