[package]
name = "hyge-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime renderer: wgpu device, bindless table, clustered forward, meshlet culling, post-process."

[dependencies]
wgpu = { workspace = true }
naga = { workspace = true }
bytemuck = { workspace = true }
bitflags = { workspace = true }
bevy_ecs = { workspace = true }
hyge-core = { workspace = true }
hyge-render-graph = { workspace = true }

[lints]
workspace = true
unsafe_code = "allow"
