[package]
name = "hyge-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime renderer: wgpu device, bindless table, clustered forward, meshlet culling, post-process. Implementation deferred to M2 (see roadmap R-023..R-025 and R-040..R-058)."

[lints.rust]
unsafe_code = "allow"

[dependencies]
hyge-core = { workspace = true }
