[package]
name = "hyge-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime renderer: wgpu device init, surface/swapchain, bindless table, clustered forward, meshlet culling, post-process."

[lints.rust]
unsafe_code = "allow"

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true }
bitflags = { workspace = true }
naga = { workspace = true }
winit = { workspace = true }
hyge-core = { workspace = true }
hyge-ecs = { workspace = true }
hyge-render-graph = { workspace = true }
hyge-window = { workspace = true }
tracing = { workspace = true }
pollster = { workspace = true }
egui = { workspace = true }

[dev-dependencies]
hyge-runtime-test = { workspace = true }
