[package]
name = "hyge-runtime-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless wgpu test harness: TestRenderer, capture_frame, assert_image_matches, hash_image. Implementation deferred to M2 (see roadmap R-090, R-092)."

[dependencies]
hyge-core = { workspace = true }
