[package]
name = "hyge-scene"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "glTF import, .hyge-world / .hyge-prefab formats, hierarchical prefab system, instancing extraction, component catalog. Implementation deferred to M6 (see roadmap R-060..R-064)."

[dependencies]
hyge-core = { workspace = true }
