[package]
name = "hyge-script"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Lua via mlua, sandbox, bevy_reflect-driven bindings, hot-reload. Implementation deferred to M7 (see roadmap R-076..R-077)."

[dependencies]
hyge-core = { workspace = true }
