[package]
name = "hyge-script"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Sandboxed Lua runtime with bevy_reflect ECS bindings and engine APIs."

[dependencies]
hyge-core = { workspace = true }
hyge-ecs = { workspace = true }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true }
mlua = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
