[package]
name = "hyge-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI: hyge-tools {import, cook, headless, inspect, serve, doctor}. Implementation deferred to M3 (see roadmap R-033)."

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
hyge-core = { workspace = true }
