[package]
name = "hyge-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI: hyge-tools {import, cook, headless, inspect, serve, doctor}. Implementation deferred to M3 (see roadmap R-033)."

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
hyge-core = { workspace = true }
hyge-asset = { workspace = true }
hyge-editor = { workspace = true }
# `image` is used by the `import` subcommand to decode
# standalone PNG / JPEG / EXR sources for KTX2 transcode (R-036).
# We enable png + jpeg as the common formats; EXR is opt-in via
# the `texture-exr` cargo feature because the `exr` crate pulls
# in additional decode tables.
image = { workspace = true, features = ["png", "jpeg"] }

[[bin]]
name = "hyge-tools"
path = "src/main.rs"
