[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hyge-editor-python"
version = "0.1.0"
description = "PySide6/QML frontend for the Hyge Rust editor service"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.8,<7", "blake3>=1.0,<2"]

[project.optional-dependencies]
test = ["pytest>=8", "jsonschema>=4.23"]

[tool.pytest.ini_options]
pythonpath = ["src"]
